--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-modal-video": "^1.2.0",
     "@types/react-responsive-masonry": "^2.1.0",
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "tailwindcss": "^3.4.3"
   }
 }
